Member listing icons

--- a/ILEditor/UserTools/MemberSearchListing.resx
+++ b/ILEditor/UserTools/MemberSearchListing.resx
@@ -117,4 +117,67 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABg
+        DAAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AJQAB/wHu
+        Ae8BtQG0AZEFiwKRAfQCAAH/Ae4B7wG1AbQBkQSLASgBAgGRAfQGAAH1ARoBbwJMAW8BGgH1CAAB9QG8
+        Aa4CiwGuAbwB9AQAAfEBtAG7AQkB8AHxAfMB9AH1Af8BGQH0AbUB8AIAAfEBtAG7AQkB8AHxAfMB9AH1
+        Af8BLgFQASgB7gUAAfMCbwGTApQBFgJMARsGAAHzAa4BtAG7AgkBuwKuAfMDAAHuAbUF/wP1AbUBGQG1
+        Ae4CAAHuAbUE/wFQAU8CLgFQAZgBUAFPAfQDAAHzAUwBFgGUARYCbwEWAZQBbwFMARsEAAHzAYsBtAG7
+        BLQBuwG0AYsB8wIAAfIBiwm0ARkBCQEHAgAB8gGLBLQBUASYAXgBmAFQAU8B9AEAAfUBbwEWAZoCbwKU
+        AhcBlAJvAfUCAAH1AbQBtQEJBrQBtQG0Aa4B9QEAAf8BuwG1AfQDCQQZAfQBCQG1AgAB/wG7AbUB9AIJ
+        AVABmAV4AZgBUAEuAQABGgFvAZoD4wL/Am8BFwGUAW8BGgIAAfABtAEJArQBCQL/AfECtAG7Aa4BvAIA
+        AfQBtAH/CBkB8QG1AwAB9AG0Af8CGQFQAZkDmAF4AZgBUAEuAf8BAAEWApQD4wKUA28BFgGTAW8CAAG0
+        AbsBtQO0AfEB9QS0AbsBrgIAAf8BtAH/CBkB8wG0AwAB/wG0Af8CGQRQAXIBmAFQAU8B/wIAAeMBmgF1
+        A+MBvQH/AuMCbwGUAUwCAAGzAQkEtAHyAfUEtAEJAYsCAAH/AbMB9QgZAfUBswH/AgAB/wGzAfUGGQFQ
+        AXgBUAGzAf8CAAHjAZoBdQPjAv8E4wGUAUwCAAGzAQkEtAL/BLQBCQGLAwABtAH1CBkB/wG0Af8DAAG0
+        AfUGGQJQAfUBtAH/AgADlAF1AuMC/wPjApQBbwIAAbQBCQG7A7QCCQO0AbUBuwHPAwABtAHzCBkB/wG0
+        Af8DAAG0AfMIGQH/AbQB/wIAARoBFgGaA3UC/wPjAZoBbwEaAgABGQG0AQkDtAL1A7QBCQG0AbwDAAG7
+        ARkB9AcZAf8CtAH0AgABuwEZAfQHGQH/ArQB9AEAAfYBdQGUAZoCdQL/AuMBmgEWAW8B9QIAAfUBtAG7
+        AQkCtAIJArQBCQG1AbQB9QMAAgkB9QcZAf8BtAEZAbQCAAIJAfUHGQH/AbQBGQG0AgAB8wF1AZQBmgGU
+        AnUBlAGaAXUBbwHzBAAB8wG0AbsCCQK1AbsBCQG1Aa0B8wQAAgkB/wQZA/QB/wG0Af8BuwIAAgkB/wQZ
+        A/QB/wG0Af8BuwMAAfMBlAEWAZQCmgGUARYBdQHzBgAB8wK0AwkBuwK0AfMFAAHxAQkB/wT0AvUC/wH1
+        ARkBtAIAAfEBCQH/BPQC9QL/AfUBGQG0BAAB9QEaAZQCdQGUARoB9QgAAfUB8QS0AfAB9QYAAfIB3AT/
+        AfUB9AMZAQkBugHzAgAB8gHcBP8B9QH0AxkBCQG6AfMiAAH0AQkB3AHbBLoBuwMJAfQB/wIAAfQBCQHc
+        AdsEugG7AwkB9AH/AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAT/AQABAwEA
+        AQMB8AEPAfABDwEAAQMBAAEDAeABBwHgAQcBAAEDAQABAQHAAQMBwAEDAQABAwIAAYABAQGAAQEBAAED
+        AgABgAEBAYABAQGAAQMBgAEAAYABAQGAAQEBgAEDAYABAQGAAQEBgAEBAYABAQGAAQEBgAEBAYABAQHA
+        AQEBwAEBAYABAQGAAQEBwAEBAcABAQGAAQEBgAEBAcABAAHAAQABgAEBAYABAQHAAQABwAEAAcABAwHA
+        AQMBwAEAAcABAAHgAQcB4AEHAcABAAHAAQAB8AEPAfABDwHAAQABwAEABP8BwAEAAcABAAs=
+</value>
+  </data>
 </root>
