--- a/ILEditor/Editor.resx
+++ b/ILEditor/Editor.resx
@@ -126,7 +126,84 @@
   <metadata name="toolstabrightclick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>248, 17</value>
   </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>393, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="newButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMrSURBVDhPXZNLTBNRGIWvCxeuTIwLdGGiKzcmECOEuCAa
+        jYkaDYIiIBTfCKKoCxa6QUVQW9vwUEAlRsBHqEaropQSacHyNDa8bIu0dOQhbYASKe3MdHr8O4wx8U9O
+        JnPvfOf+99w77G9lv+TiVXqPtdjkRdHHXygwTCH3zQSy9Zxf1eT5ma33fFPpuX5VE9dKeqF6Nb7vTE3/
+        SgVnLOuFq0Dd7sX/tchL8P4W4fCFMDgVgtUdwLO+GRx7Pjab9dyVpeCMZTQ4b9ZafTLEzYcx7ZfgW5Aw
+        F5CwEJIQFCQIYXkaQTGCduciMusdXgVnLK1uuLyx1wdRAoZnJNh9Eka9EtyzEjgymyCzCf+yQ+GTcfAi
+        UPrJDQVn7HCNrcFgm4V/Cej1COj/KcJGGpwSyVCEfSZMhmGQPy49HoDZMYfUGtukgjOWXNnTanb44ZkV
+        qT0elh88vrh4dI0L6OUEfCXZJgVIESBD24fkyt6F5Iq+3QrO2AFNp9M+HcAAfWQiA9Moj8+jAsxjy+oc
+        49HtEeUtplV2I1VjXaOgy7W3rI33L4XR5ebRRqt//kEgGXQQbFEMesZFOcgUjRm7ylpXKyhjqZqXq/aV
+        tMjpmmU4JKt9lERgVB2kPk5EgA9jz/VmkQErFJyxXUWGDYdutYAPRwiMtk4gGVhoG1FDC8G1Rj2uVOfg
+        zL2DOHpjd2RP0ZZrCs5Y0mX95iO3PlJAEVhcgtx+O8FRmQmu/NCI4qbjeD9UBduUEdrWPKRptyA+f52a
+        4Ma12y80NKlfD2OSzvtpVxCvvgXxYZiycFIXrhBy7uzF20Ed3o6Uy/dAbToNreksGcQEWcK5urTE3MdL
+        6SXvcbXRgYt1duQ9/I6T9+3IKh9BunYI+6/GoXnokQz/LcNAFRLy14FtO1V9u6ShSxn+VxSHHOpCMIKk
+        wk24azyBUmOOPFfakvOvg62qitwC3SfUG0fwzupGx9A0Bt1z4LwBzC+KWKJ/4IGhDCnqzdAYT8krR5/R
+        dzmDrenqtbEZupuxGdr6uExdM6knLlPrjM3U+WhMSDxehR3narHzYjoSz2+U207IXx+Iz4spY4yxPxEb
+        yrgeQzLEAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="saveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANSSURBVDhPXZJPTFNZFMbvxsXsXZvMblZGnehETXSDG00m
+        qYODgKVq1BRjEcZMkGFGRVv80yJETKSoVWn547Q6DM4gigYQbW1ptQpIW2hLSynymtI2Bdq+18fnsXSi
+        mZN8uSfn3e937z3nsf+i7H5wi8wUMNc941D9+CMUPWHIu0MoMwXjMmNgpswUeCszBe0yY7Cf1CV7ML3n
+        mNa+Jm9nTNrlU2gGOfw/FjMiuKQAdySN0XAaZv8SOkbmcaDTG5V2+qR5O2MlBo+y1RzJmYKxLObiIiIJ
+        EQtLIhJpESleBJ/NfUZKWMGgZxGlejeXtzNWpBu/1m6LQBCB8XkRroiISU6EPyoiSLAQwULxVULl3Wlk
+        BOBinx95O2P7tE5DjzOK+DJgC/CwzwhwkkbDAgEFuOazBMyC+Ki6/R5D7gUUap2zeTtjkuvW/iF3HIGo
+        QNfL4MVUBq98GVimediCPBwk5ywPcQUoaRyB5LotIWke2ZW3M/Zjw0uPa24J72nTMwJU3BhDrW4MVS1O
+        nDd8gPyqA+VNDvza6sQp7TscVr/Gt8UPt+TtjO2+9DwTX87C4s/gOZ1+tMGObkcy9+ZHlpnc+nXcG+Bw
+        8LJ1tQeFDfe/2aN6kuvuEJkHptIorbdANxjLba5otufWz5Gi5iXSgOavEA5dsawCCqp71u2tf4JMdoXM
+        BJhMQ3rpNZ0So9GJEKgu0uOzJJ7GJFBN1eXFT2eHVgE7fzF993P9Y2rQCl74eILw9AQbtH0czrR7ca7D
+        i9/1k/jtrhs1pNN3XDitc0GqHACZ29durzAYNQ/HMUvzbrOk8OBtCofUVlz7N4y6ziApgD/0PtTem0LN
+        nUlU69w41TqGojP9YD+U64q2ym8vF6v+QW27GyeJfPzmBArrXuJGL0e/cRLhRJQUQzgewyzl0aUkam6N
+        o6CyG2zzkZbLKoMl36IvITk7jNbeGD4mOSgHJGixnoTWWkV5IeYXQ6i95cW28j/Bvpc1yxVNfdA//YBH
+        Zj+Gx+Yw6l/AvgtmPH3zeQpeWBYuYmKxDRPLbZRrqDYNVZsXO44bCVCsWbuhpEm5oaRRv7G0qZdk3Vja
+        6Nl05G9+v3IYcvUoKhsDONEwBYXag4orEzihdqBAYcR6WQc+Af886/Q2LlXhAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="liblButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALLSURBVDhPrZHbT5JhHMfprnnd39B1986rtja3TCUjAgwQ
+        IRQQpRchBV7dLIfzmIqHChDNExqpVCjOPEx9nYfpMnPONU/NExeuqNbN++19Hm217LLv9tueve/v+/l9
+        f88j+u9aYNmESSeTGLWY5LsaNXZup9PazVIiyhjvTj5gEknPWft5LdksXMych2O9DoeC6cRuxwnD0POx
+        IQexAjPmCwu4s/bz2pBl8J8dDnyvb8KhPhu7UjEtcibfyL91SQoftRguUwPbwiYwj5nE/GqT3Nadhy3x
+        dcQDAcSMuTgSViCmX7AjnRb7aoWwUiqGGfMVCijyWrmHYQdcoULYg2ZsZ9zAj4EwvnoacZyro5Fjljx8
+        UsiomayyI03/DTD4svmakUcIzLTA0c9QOgHEPU2I19fjpKoSByoFNR+oM08BfybQ+jIxtjaMmpFy2PsK
+        sHnnJp0c9zTjS10dTirc2FfKqZEA9oTpHzKSeauz4SrLDiaI9H4V5j5OY3g1jN65DrQGSzFlUmNLmkZf
+        gqQgd7Enl2JTnIwxjQqsuxMFrRMwlHVwopy2LExvjGNouR8DS0F0cl4U9prgKm4Ep5YJL5CGLUkqOKUU
+        ZfZa6GqjqBlaQXFgBqn2bl5k8Gr40GIP+hY60TMXgG+6BUyPAamOF3jJbaLU9xbaqgg1kSIAfd0oVBVv
+        IHYNQJRfbUwyeu7tG9t1aBmvR8esl95FuiuE0eVdBKc24I28g7N9FubmCSjcr6k5q3oEGSUCgAjAhbxa
+        o0bbqI7nBjTIaVNTemRxG8/H19El1LORVagqI9SsFhIRAE3wtyyVuktKVnlRwvbxvuh7eKNreCokaBDi
+        Z7pPJxOApHQQKdYu/sx2XtlOT5KsyL8vFRrdwXk0hlegqY5CVv4KKbYgblmfHGcxddfO2v8tspre0Zwt
+        sfvjkpJBIXIIYqv/m9LWcP+0QyT6CdS3DsZ2yV8aAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="compileButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJKSURBVDhPpdJbSNNRHAfwE730VD4VSRRG0uUpCQm70IMh
+        9RR7CMFEU2utJttqFriNco7hUrQpY2qX6W7mupAkZtoFs5u5MoqCLqMnYaKVutt/92/nnP+M6MnsC9+X
+        w/l9/ud//n/y35GoPPLmPl9Ie90HTQ+t6wtqHZ9wrvsjzto+QH3tPc5cfgtV5wSUVi+qLa+g6XwWYnMc
+        MN7ypdqGpvCvVZhHUhxgT15KpU0j4IDG9RVLSVXDIxGodX7mC7FEElFaIZZASEggIMQxF47hR1DA9GwE
+        /pkwJqeD+OYP8P1HjcMZgF4YSzyVQjyZ5FAknkA4KkLzkQR+hqKYCVBoTsDU9wjfX6YfFAF22yxJCiQY
+        QhujkEChMDsNhYIUUvXsw/GuPPhn5/n+0vMDIsA+FUsynebAAhSjjTKIIgw66SiAvr8ExR1b6CkFlOju
+        ioD66rvfwEIZoHTvhcJVAJkjH5W2POjuHMYNbytqbh5CkXktirUeEVC2vxYB2tQfkNy5E30TVtx+Y+GD
+        vV4zzA9rYH/ZCJm7CPkNK7DDRFYRhWWcAyxpWoakKFBF35cNtwwrcfG+HMZ7UtT1V6B+4AQ6Rg0o7d6D
+        3AskSarbxvjw3zlyZSs842a4x5phf9EI23MTRU6hfbQeUvcB5OpWIltDthPJ6V6PrOUp/7OOmR6jwvgA
+        5YYhSNo34mDrOhReWo3dTVko69oF65M6VDqLsEmXhf1q/SC/g8Vmm2FZuNxeiA1aMpmtI5szy4tPjo6E
+        12uXY42W5GSWaAj5BRUefiefi1eCAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAEBAAAAEAIABoBAAAVgAAABgYAAABACAAiAkAAL4EAAAgIAAAAQAgAKgQAABGDgAAMDAAAAEA
