--- a/ILEditor/UserTools/SourceEditor.resx
+++ b/ILEditor/UserTools/SourceEditor.resx
@@ -117,4 +117,85 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABq
+        EAAAAk1TRnQBSQFMAgEBCAEAARgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ACQABRAFL
+        AVIBmQH2EQABGgFMASUBTAEaCAAB/wHyAZEBtAKuAfAGAAFEAUsBUgGZAfYLAAFLApoBUgFMAfQPAAEa
+        AkwBLAIrARoGAAH0AZEBtAG1AbsCtAGLAZEB8wQAAUsCmgFSAUsB8QYAAQcDtAFRAfYBdAFMAlIErgEH
+        AQABBwW0A88BJAF1AU0CLAErAUwEAAL/AZEEuwS0AYsEAAFRAfYBdAFMAlIBBwH0BAABtAP/AZkBeQGZ
+        AXkCegF0AfYC/wGuAQABtAj/ASUBmgP/AU0BJQEAAf8B8QNyAc8DCQG7BLQBzwIAAf8B8QFzAXkBmQF5
+        AnoBUgGSAfAB/wIAAbQE/wEaAXkBwwN6AVIB8wH/Aa4BAAG0CP8BTAGaAVMBLAJTAUwB9AHsAXICmAFy
+        Aa4CCQG7BrQB/wHyAe8BBwHzAZkBeQHDA3oBUgEcAe8B8gH/AbQF/wEaAXkBwwN6AVIBGwGuAQABtAj/
+        AZkBTAGaARoBdQFMARoBcgSYAXIBiwEJAbUBtAK7A7QBzwIHAfIB9AHyAfEBmQF5AcMDegFSAe8B9wEH
+        AbQG/wEaAXoBwwN6AXQBrgEAAbQJ/wGTAUwBJQFMAW4BAAFyAggBBwGYAXIB7AFvAhcBbwHsAbQBuwG0
+        Aa4B7wL0AvIC8QGZAXoBwwN6AVIBBwGSAbQH/wEaAXoBwwJ6AnQB9QG0B/8F9QH/Ac8BAAFyAggBmAEc
+        AW8BFwHjAZQB4wFvAUwBbwGRAbQBtQHvAvQC8wHyAvEBmQF6AcMCegJ0ARwBtAX/A/UBGgGaARoBmQGa
+        ARoBdAG0Bf8F9QL0Af8BzwEAAXIBCAGYAXIBbwHjA5QBbwLjARcBTAHzAf8B7wL0AfMB8gEHAbwC8AGZ
+        AXoBGgGZAZoBGgF0AbQE/wT1AfQBGgF5ARoB9gEaAXQBtAT/BPUE9AH/AbQBAAFyApgBcgEXAb0DlAHj
+        AW8C4wEXAfQBAAHvAfQB8wLxAQcB8QL/AfEBmQF5ARoB9gEaAXQBtAP/BPUC9AHzARoBdAGZAVIBGwG0
+        A/8E9QL0A/MB/wG0AQAB7wF4AnIBFwG9AZQD4wJvAeMBFwH0AQAB7wHxArwB8AHvBP8B7wGZAXQBmQFS
+        AXQBtA3/AbQBAAG0Df8BtAEAAf8B9AHyAXIBFwGUAuMClALjAW8BFwH0AQAB8AHvAfAC/wEHAe8C9wHv
+        AQcC/wHwAe8BvA+0AQAPtAUAAW8BFgGUAeMCFwHjAZQBFgFMAfUCAAHvA/8B8gHvAvAB7wHyA/8B7wEA
+        AbUNCQG0AQABtQ0JAbQFAAGTA+MCFgPjAZMDAAHyAQcC9wHvAfAC/wHwAe8C9wEHAfIBAAHxAbsLtAG1
+        AfEBAAHxAbsLtAG1AfEFAAH/AfQB8wFvAhcBbwHzAfQB/wYAAf8B7wT/Ae8B/zkAAfIBBwL3AQcB8hsA
+        AfMBmQF5AfMHAAG1AbQBrQG7EQAB/wL0Af8aAAH0AZkBUgGaAXkBUgGZAfQEAAEJAbUCCQG0AbsNAAH/
+        AfAC9wHvAfcB7QGSAfAB/wMAAQcFtAPPBa4BBwMAAf8BGgFSAZkCwwKaAXQBUgEaAf8CAAG0BAkBtAEJ
+        CwAB8wHvAbwB8wP0AfMB8gEHAZIB9AIAAbQN/wGuAQAB/wEbAnkCwwGgAZoCWAKaAnQBGgH/AbQFCQG0
+        AQkKAAHvAfEB9AHxAfAB8QHwAQcBvAHyAQcBkgIAAbQN/wGuAQABmQF5ARoCwwOaAVkBWAFSAXQBmgF5
+        AVIBeQHdBgkBtAEJCQAB7wH0AfEC8AHxAfABBwLvAfEBkgIAAbQK/wL1Af8BrgEAAVIB9gPDAaACmgJZ
+        AVgCUgF5AZoBUgEAAd0GCQG0AQkIAAHvAfQB8gHxAfAC8QEHAu8B8gH3AgABtAn/A/UB/wHPAQABeQH2
+        BMMBmgF6A1kBWAJSAZoBUgIAAd0FCQK1CAABBwH0AfIC8QHyAfEDBwHyAfcCAAG0B/8F9QH/Ac8BAAF5
+        AfYEwwGaAXoEWQJYAZoBUgMAAfEDCQG1AbQB7AH0BwABBwH0AfMB8gHxAfIB8QG8AgcB8gHvAgABtAX/
+        BfUC9AH/Ac8BAAF5AfYDwwGaAXoBWQKaBFkBmgFSBAAB8QIJAbUB8AHvA+wB9wHxAwABBwH0AfME8gG8
+        AgcB8gHvAgABtAT/BPUE9AH/AbQBAAF5AfYBwwEaAZoCegFYARoBwwGaAXoCWQGaAVIFAAHxAQkB7QEH
+        AbwEBwHsAfECAAEHAfQB8wHxA/ADBwHyAe8CAAG0A/8E9QL0A/MB/wG0AQABeQH2AcMCmgJ5AVIDwwGa
+        AXoCmgFSBwAB8wHtAfABvAQHAfcCAAEHAfQB8gHzAfQC/wH0AfEBBwHyAe8CAAG0Df8BtAEAARoBWAGa
+        ARsBGgKZAnkBmgF6A5oBdAGZCAAB7QHxAQcD7wHwAewCAAEHCf8B8wHvAgAPtAIAAfQBmQF5ARsC9gHD
+        AXQDmgJ5AfMJAAGSAfIBvAHvAQAD7AIAAfAB8gj/AbwB8AIAAbUNCQG0AwAB/wEbAXkBmQL2AhoCeQEb
+        Af8KAAHvAvIBBwHtBQAB9AG8AfAB8wH0Av8B8wHyAgcB/wIAAfEBuwu0AbUB8QUAAf8BGgF5AZoBmQF5
+        ARoB/wwAAfIB9wHyAfMB7QYAAf8B8wHwAwcBvAHwAfQB/xkAAfUCmQH0DwAB8gHvApITAAFCAU0BPgcA
+        AT4DAAEoAwABQAMAATADAAEBAQABAQUAAYABARYAA/+BAAHwAX8B/wHBAf4BAwHwAX8B8AE/Af8BgAH8
+        AQAB8AE/AQABAQIAAfABAAHwAQ8BAAEBAgABgAEAAcABAwEAAQEHAAEBBwABAQEAAQEHAAEBBwABAQcA
+        AQEBAAEBBQABAQEAAQEDAAEBAQABAQEAAQEDAAEBAQABAQHwAQEBgAEBAQABAQEAAQEB8AEDAYABAQEA
+        AQEBAAEBAfABAwHwAQ8G/wH4AR8C/wH8AT8BhwH/AfwBPwL/AfABDwEDAf8B4AEHAQABAQHAAQMBAQH/
+        AcABAwEAAQEDAAH/AcABAwEAAQEDAAF/AcABAwEAAQECAAGAAT8BwAEDAQABAQIAAcABPwHAAQMBAAEB
+        AgAB4AEfAcABAwEAAQECAAHwAQEBwAEDAQABAQIAAfgBAAHAAQMBAAEBAgAB/gEAAcABAwEAAQECAAH/
+        AQABwAEDAQABAQGAAQEB/wEIAcABAwEAAQEBwAEDAf8BBwHAAQMBAAEBAfABDwH/AQcB4AEHAv8B/AE/
+        Af8BhwL/Cw==
+</value>
+  </data>
 </root>
